syntax = "proto3";

package daikombat.dto;

option java_multiple_files = true;
option java_package = "com.beverly.hills.money.gang.proto";

enum WeaponType {
  PUNCH = 0;
  SHOTGUN = 1;
  RAILGUN = 2;
  MINIGUN = 3;
  ROCKET_LAUNCHER = 4;
}

enum ProjectileType {
  ROCKET = 0;
}

enum PlayerSkinColor {
  GREEN = 0;
  PINK = 1;
  PURPLE = 2;
  BLUE = 3;
  YELLOW = 4;
  ORANGE = 5;
}

enum PlayerClass{
  WARRIOR = 0;
  ANGRY_SKELETON = 1;
  DEMON_TANK = 2;
}


message Vector {
  optional float x = 1;
  optional float y = 2;
}


message ProjectileStats {
  optional ProjectileType projectileType = 1;
  optional Vector position = 2;

}